Fixed spacing, added info, validation still needs work

--- a/src/index.css
+++ b/src/index.css
@@ -31,40 +31,70 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
   line-height: 1.1;
+  margin-bottom: 0;
+}
+
+.card {
+  padding: 1.4em;
 }
 
 .form {
   font-size: 1.2em;
   display: grid;
-  gap: 10px;
+  gap: 0.05em 0.5em;
   padding-bottom: 1.2em;
-  grid-template-columns: 40% 20% 40%;
+  grid-template-columns: auto auto;
 }
 
-.labels {
+/*.labels {*/
+/*  grid-column: 1;*/
+/*  text-align: end;*/
+/*}*/
+/*.inputs {*/
+/*  grid-column: 2;*/
+/*}*/
+/*.units {*/
+/*  grid-column: 3;*/
+/*  text-align: start;*/
+/*}*/
+.leftSide {
   grid-column: 1;
-  text-align: end;
+  text-align: start;
 }
-.inputs {
+.rightSide {
   grid-column: 2;
-}
-.units {
-  grid-column: 3;
   text-align: start;
 }
 #timeSig {
-
+  grid-column: 1;
   display: flex;
   gap: 0.5em;
+}
+input {
+  font-size: 1em;
+}
+label {
+  margin-top: 0.3em;
+}
+
+.resultGroup {
+  margin: 1em;
+}
+.result {
+  margin: 0.3em;
+}
+.info {
+  color: #888;
+  text-align: start;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.5em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -90,5 +120,18 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (min-width: 900px) {
+  .form {
+    padding: 1% 25% 3% 25%;
+  }
+  h1 {
+    font-size: 2.5em;
+  }
+  .info {
+    padding-left: 10%;
+    padding-right: 10%;
   }
 }
